--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "fcc-api-projects-boilerplate",
-	"version": "0.0.1",
-	"description": "An FCC Backend Challenge",
+	"name": "time-stamp",
+	"version": "0.0.2",
+	"description": "An FCC Backend Challenge using freeCodeCamp boilerplate",
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js",
@@ -9,11 +9,11 @@
 	},
 	"dependencies": {
 		"cors": "^2.8.0",
-		"express": "^4.12.4"
+		"express": "^4.17.2"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://githost.com/camper/repo.git"
+		"url": "https://timestamp-freecodecamp.alstonchan.repl.co/"
 	},
 	"keywords": [
 		"node",
@@ -23,6 +23,6 @@
 	],
 	"license": "MIT",
 	"devDependencies": {
-		"nodemon": "^2.0.12"
+		"nodemon": "^2.0.15"
 	}
 }
