--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "request_header",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"description": "API project for freeCodeCamp",
 	"main": "server.js",
 	"scripts": {
@@ -13,7 +13,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://hyperdev.com/#!/project/welcome-project"
+		"url": "https://headerparser-freecodecamp.alstonchan.repl.co/"
 	},
 	"keywords": [
 		"node",
@@ -22,6 +22,6 @@
 	],
 	"license": "MIT",
 	"devDependencies": {
-		"nodemon": "^2.0.12"
+		"nodemon": "^2.0.15"
 	}
 }
